{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 702,
  "lineage": "2870f53c-5236-1b91-42c7-186a010df598",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kp-nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b517d9e9f570049",
            "domain": "vpc",
            "id": "eipalloc-06b517d9e9f570049",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-222-4-140.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.4.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-2:583472615724:instance/i-0b052ba46e1752b09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kp1234_profile",
            "id": "i-0b052ba46e1752b09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-key-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0569d812f0730d8ea",
            "private_dns": "ip-10-0-1-38.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.38",
            "public_ip": "52.15.226.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a732df2270006c4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0081d4f83ba22a5d2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023c3a9bd2926d35f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.kp1234_profile",
            "aws_iam_role.role",
            "aws_security_group.web-node",
            "aws_subnet.kp-sub-01",
            "aws_vpc.vpc-01",
            "tls_private_key.kp-rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:internet-gateway/igw-06b50552792f159dd",
            "id": "igw-06b50552792f159dd",
            "owner_id": "583472615724",
            "tags": {
              "Name": "kp-igw"
            },
            "tags_all": {
              "Name": "kp-igw"
            },
            "vpc_id": "vpc-0c33a0b9750fc76d4"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kp-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b517d9e9f570049",
            "connectivity_type": "public",
            "id": "nat-0bea614730f6c71b0",
            "network_interface_id": "eni-0887ac405cd1d3628",
            "private_ip": "10.0.1.67",
            "public_ip": "18.222.4.140",
            "subnet_id": "subnet-0081d4f83ba22a5d2",
            "tags": {
              "Name": "kp-NAT"
            },
            "tags_all": {
              "Name": "kp-NAT"
            }
          },
          "dependencies": [
            "aws_eip.kp-nat-ip",
            "aws_internet_gateway.kp-igw",
            "aws_subnet.kp-sub-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kp-rt-prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:route-table/rtb-05ef4a753a91d901e",
            "id": "rtb-05ef4a753a91d901e",
            "owner_id": "583472615724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bea614730f6c71b0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kp-rt-prv"
            },
            "tags_all": {
              "Name": "kp-rt-prv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c33a0b9750fc76d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.kp-nat-ip",
            "aws_internet_gateway.kp-igw",
            "aws_nat_gateway.kp-nat",
            "aws_subnet.kp-sub-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kp-rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:route-table/rtb-07692f0dc2119a39a",
            "id": "rtb-07692f0dc2119a39a",
            "owner_id": "583472615724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b50552792f159dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kp-rt-pub"
            },
            "tags_all": {
              "Name": "kp-rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c33a0b9750fc76d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kp-igw",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kp-rt-asso-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0099e54404e588a9b",
            "route_table_id": "rtb-07692f0dc2119a39a",
            "subnet_id": "subnet-0081d4f83ba22a5d2"
          },
          "dependencies": [
            "aws_internet_gateway.kp-igw",
            "aws_route_table.kp-rt-pub",
            "aws_subnet.kp-sub-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:security-group/sg-023c3a9bd2926d35f",
            "description": "Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023c3a9bd2926d35f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-node",
            "name_prefix": "",
            "owner_id": "583472615724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c33a0b9750fc76d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kp-sub-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:subnet/subnet-0081d4f83ba22a5d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0081d4f83ba22a5d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583472615724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kp-sub-pub-01"
            },
            "tags_all": {
              "Name": "kp-sub-pub-01"
            },
            "vpc_id": "vpc-0c33a0b9750fc76d4"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kp-sub-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:subnet/subnet-0ffa2cf49f6075970",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffa2cf49f6075970",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583472615724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kp-sub-prv-01"
            },
            "tags_all": {
              "Name": "kp-sub-prv-01"
            },
            "vpc_id": "vpc-0c33a0b9750fc76d4"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:583472615724:vpc/vpc-0c33a0b9750fc76d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0398c98c620a29e9a",
            "default_route_table_id": "rtb-0786e3d7c9157e90b",
            "default_security_group_id": "sg-06203ff9bb370e5f7",
            "dhcp_options_id": "dopt-0f890a129a4779803",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c33a0b9750fc76d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0786e3d7c9157e90b",
            "owner_id": "583472615724",
            "tags": {
              "Name": "kp-vpc"
            },
            "tags_all": {
              "Name": "kp-vpc"
            }
          }
        }
      ]
    }
  ]
}